--- a/src/App.css
+++ b/src/App.css
@@ -40,38 +40,99 @@
   }
 }
 
-.NameBanner {
-  font-family: 'Staatliches';
-  font-size: 6.5vw;
-  color: #FFF500;
-  margin: 0in;
-}
-
-a {
-  padding: 1vw;
-  font-size: 1vw;
-  font-family: 'Marvel';
-  color: #FFF500;
-}
-
-.NameSubtitle {
-  font-family: 'Marvel';
-  font-size: 2vw;
-  margin-top: -1.5vw;
-  margin-bottom: 1vw;
-  color: #FFF500;
-}
-
 .Menu {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+  z-index: 0;
+  background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, #7814DC 100%);
 }
 
 .MenuDiv {
   height: 100vh;
   width: 100vw;
-  display: flex;
-  justify-content: center;
-  background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, #7814DC 100%);
 }
+
+@media (min-aspect-ratio: 16/9) {
+  #bgVideo {
+    min-width: 100vw;
+    /* min-height: 100vh; */
+    max-width: 100vw;
+    /* max-height: 100vh; */
+    overflow:hidden;
+    right: 0;
+    top: 0;
+    position: fixed;
+    z-index: -1;
+  }
+
+  .NameBanner {
+    font-family: 'Staatliches';
+    font-size: 6.5vw;
+    color: #FFF500;
+    margin: 0in;
+    text-shadow: 0px 5px 10px rgba(0, 0, 0, 0.25);
+  }
+  
+  a {
+    padding: 1vw;
+    font-size: 1.15vw;
+    font-family: 'Marvel';
+    color: #FFF500;
+    text-shadow: 0px 5px 10px rgba(0, 0, 0, 0.25);
+  }
+  
+  .NameSubtitle {
+    font-family: 'Marvel';
+    font-size: 2vw;
+    margin-top: -1.5vw;
+    margin-bottom: 1vw;
+    color: #FFF500;
+    text-shadow: 0px 5px 10px rgba(0, 0, 0, 0.25);
+  }
+
+}
+
+@media (max-aspect-ratio: 16/9) {
+  #bgVideo {
+    /* min-width: 100vw; */
+    min-height: 100vh;
+    /* max-width: 100vw; */
+    max-height: 100vh;
+    overflow:hidden;
+    right: 0;
+    bottom: 0;
+    position: fixed;
+    z-index: -1;
+  }
+
+  .NameBanner {
+    font-family: 'Staatliches';
+    font-size: 8vh;
+    color: #FFF500;
+    margin: 0in;
+    text-shadow: 0px 5px 10px rgba(0, 0, 0, 0.25);
+  }
+  
+  a {
+    padding: 1vh;
+    font-size: 2.5vh;
+    font-family: 'Marvel';
+    color: #FFF500;
+    text-shadow: 0px 5px 10px rgba(0, 0, 0, 0.25);
+  }
+  
+  .NameSubtitle {
+    font-family: 'Marvel';
+    font-size: 4vh;
+    margin-top: -1.5vh;
+    margin-bottom: 1vh;
+    color: #FFF500;
+    text-shadow: 0px 5px 10px rgba(0, 0, 0, 0.25);
+  }
+
+}
+
